; ModuleID = '/home/carl/AnghaBench/mimikatz/mimidrv/extr_kkll_m_memory.c_kkll_m_memory_genericPointerSearch.c'
source_filename = "/home/carl/AnghaBench/mimikatz/mimidrv/extr_kkll_m_memory.c_kkll_m_memory_genericPointerSearch.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@STATUS_INVALID_HANDLE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @kkll_m_memory_genericPointerSearch(i64* %0, i64 %1, i64 %2, i32* %3, i32 %4, i64 %5) #0 {
  %7 = alloca i64*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i64, align 8
  %13 = alloca i32, align 4
  store i64* %0, i64** %7, align 8
  store i64 %1, i64* %8, align 8
  store i64 %2, i64* %9, align 8
  store i32* %3, i32** %10, align 8
  store i32 %4, i32* %11, align 4
  store i64 %5, i64* %12, align 8
  %14 = load i64, i64* %8, align 8
  %15 = load i64, i64* %9, align 8
  %16 = load i32*, i32** %10, align 8
  %17 = load i64*, i64** %7, align 8
  %18 = load i32, i32* %11, align 4
  %19 = call i32 @kkll_m_memory_search(i64 %14, i64 %15, i32* %16, i64* %17, i32 %18)
  store i32 %19, i32* %13, align 4
  %20 = load i32, i32* %13, align 4
  %21 = call i64 @NT_SUCCESS(i32 %20)
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %34

23:                                               ; preds = %6
  %24 = load i64, i64* %12, align 8
  %25 = load i64*, i64** %7, align 8
  %26 = load i64, i64* %25, align 8
  %27 = add nsw i64 %26, %24
  store i64 %27, i64* %25, align 8
  %28 = load i64*, i64** %7, align 8
  %29 = load i64, i64* %28, align 8
  %30 = icmp ne i64 %29, 0
  br i1 %30, label %33, label %31

31:                                               ; preds = %23
  %32 = load i32, i32* @STATUS_INVALID_HANDLE, align 4
  store i32 %32, i32* %13, align 4
  br label %33

33:                                               ; preds = %31, %23
  br label %34

34:                                               ; preds = %33, %6
  %35 = load i32, i32* %13, align 4
  ret i32 %35
}

declare dso_local i32 @kkll_m_memory_search(i64, i64, i32*, i64*, i32) #1

declare dso_local i64 @NT_SUCCESS(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
